# grim-workspace

./: .gitconfig  .gitignore  README.md  pyproject.toml  workspace.toml
.config/pypoetry/: pyproject.toml
.github/workflows/: jekyll-gh-pages.yml  jekyll-mg-pages.yml  jekyll-pm-pages.yml
bases/grim/docs/: README.md  __init__.py
components/grim/masters_guide/: __init__.py
components/grim/masters_guide/obsidian_vault/: DesignLeads.md  README.md
components/grim/masters_guide/obsidian_vault/.obsidian/: workspace.json
components/grim/masters_guide/obsidian_vault/Tables/: Carousing.md  Checks.md  oracle.md
components/grim/players_manual/: __init__.py
components/grim/players_manual/obsidian_vault/: README.md
components/grim/players_manual/obsidian_vault/.obsidian/: workspace.json
components/grim/players_manual/obsidian_vault/01 Introduzione/: 01 Terminologia.md  02 Caratteristiche del Personaggio.md  02 Definizione del Personaggio.md  03 Creare un Personaggio.md  04 Esempio di creazione del Personaggio.md  05 Abilità.md  06 Livelli e Ranghi.md
components/grim/players_manual/obsidian_vault/01 Starting Play/: 02 Caratteristiche del Personaggio.md  03 Creare un Personaggio.md  05 Abilità
components/grim/players_manual/obsidian_vault/01 Starting Play/05 Abilità/: 051 Valori.md  052 Check.md
components/grim/players_manual/obsidian_vault/02 Razze e Allineamenti/022 Razze Umanoidi/: 0221 Umano.md
test/bases/grim/docs/: test_core.py
test/components/grim/masters_guide/: test_core.py
test/components/grim/players_manual/: test_core.py
(+55 files in other folders)
