[tool.poetry]
name = "grim"
version = "0.1.0"
description = ""
authors = ["Simone Cittadini <simone.cittadini@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
openai = "^1.28.1"
gpt-index = "^0.8.42"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
